sale detaily done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,15 +8,15 @@
     /* --color-primary-base: #0b1739; */
     --color-primary-muted: #1d2535;
     --color-secondary-base: #929394;
-    --color-info-base: #3383f9;
+    --color-info-base: #4d4d4d;
     --color-blue-base: #3c50e0;
-    --color-info-muted: #b5d1f4;
+    --color-info-muted: #a5a5a5;
     --color-warning-base: #e4a11b;
-    --color-danger-base: #ce3426;
-    --color-success-base: #157f40;
+    --color-danger-base: #fb5454;
+    --color-success-base: #10b981;
     --color-neutral-base: #eff4fb;
     --color-neutral-muted: #1d2535;
-    --color-black-base: #131517;
+    --color-black-base: #8a99af;
     --color-black-solid: #000000;
     --color-black-muted: #8a99af;
   }
